<resources>
    <!-- App -->
    <string name="app_name">ToDo</string>

    <!-- MainActivity -->
    <string name="action_settings">Settings</string>

    <!-- Action bar labels -->
    <string name="notes_list_fragment_label">Notes</string>
    <string name="note_fragment_label">Note</string>
    <string name="focus_fragment_label">Focus</string>
    <string name="task_list_fragment_label">Tasks</string>
    <string name="profile_fragment_label">Profile</string>

    <!--  NoteFragment  -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_hint">write description here</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="description_save_new_note">Save new note</string>
    <string name="cd_add_new_note">Add new note</string>
    <string name="notes">Notes:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notes_title">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="focus">Focus</string>
    <string name="profile">Profile</string>
</resources>